# zhumeng-qiangji-skill

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DATA_COLLECTION_GUIDE.md  GPT_ADAPTER.md  Makefile  RAG_ADAPTER.md  README.md  pyproject.toml  requirements.txt
docs/: architecture.md  data_schema.md  evaluation.md  gold_rules.md  guardrails.md  product_overview.md  prompting_strategy.md  roadmap.md  routing_strategy.md  skill_system.md  terminology.md
evals/: benchmark_cases.yaml  hallucination_cases.yaml  routing_cases.yaml  scoring.md
examples/: expected_outputs.md  failure_cases.md  user_queries.md
knowledge/glossary/: terminology.md
knowledge/mock/: admissions_rules.demo.yaml  exam_memory.demo.yaml  policies.demo.yaml  schools.demo.yaml
prompts/: eligibility_analysis.md  exam_prep.md  master_router.md  policy_analysis.md  risk_guard.md  school_mode_analysis.md  school_recommendation.md  score_disambiguation.md  service_routing.md  system_prompt.md
rules/: admissions_pathways.yaml  province_sensitivity.yaml  routing_rules.yaml  school_mode_constraints.yaml  score_guardrails.yaml  uncertainty_policy.yaml  year_priority.yaml
schemas/: admissions_rule.schema.json  answer.schema.json  evidence_status.schema.json  exam_memory.schema.json  policy.schema.json  school.schema.json  user_profile.schema.json  user_query.schema.json
scripts/: lint_repo.py  run_guardrail_demo.py  run_router_demo.py  validate_schemas.py
skills/: SKILL_INDEX.md
tests/: test_router.py  test_score_guardrails.py  test_skill_outputs.py  test_uncertainty_policy.py
(+51 files in other folders)
